src/grammar/SanyaScriptParser.py
# Generated from src/grammar/SanyaScript.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SanyaScriptParser ( Parser ):

    grammarFileName = "SanyaScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "'<->'", "'['", "','", "']'", 
                     "'('", "')'", "'node'", "'arc'", "'graph'", "'-['", 
                     "'<-['", "']->'", "'print'", "'='", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NODE_TYPE", "ARC_TYPE", "GRAPH_TYPE", "WEIGHTED_ARC_START", 
                      "WEIGHTED_UNDIRECTED_ARC_START", "WEIGHTED_ARC_END", 
                      "PRINT", "EQUALS", "PLUS", "MINUS", "MULT", "DIV", 
                      "INT", "ID", "WS", "COMMENT" ]

    RULE_sanyaScript = 0
    RULE_assignment = 1
    RULE_defvar = 2
    RULE_defnode = 3
    RULE_defarc = 4
    RULE_defgraph = 5
    RULE_arc = 6
    RULE_simpleArc = 7
    RULE_simpleUndirectedArc = 8
    RULE_weightedArc = 9
    RULE_weightedUndirectedArc = 10
    RULE_value = 11
    RULE_nodeValue = 12
    RULE_arcValue = 13
    RULE_graphValue = 14
    RULE_type = 15
    RULE_cast = 16
    RULE_print = 17

    ruleNames =  [ "sanyaScript", "assignment", "defvar", "defnode", "defarc", 
                   "defgraph", "arc", "simpleArc", "simpleUndirectedArc", 
                   "weightedArc", "weightedUndirectedArc", "value", "nodeValue", 
                   "arcValue", "graphValue", "type", "cast", "print" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    NODE_TYPE=8
    ARC_TYPE=9
    GRAPH_TYPE=10
    WEIGHTED_ARC_START=11
    WEIGHTED_UNDIRECTED_ARC_START=12
    WEIGHTED_ARC_END=13
    PRINT=14
    EQUALS=15
    PLUS=16
    MINUS=17
    MULT=18
    DIV=19
    INT=20
    ID=21
    WS=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SanyaScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SanyaScriptParser.EOF, 0)

        def defvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SanyaScriptParser.DefvarContext)
            else:
                return self.getTypedRuleContext(SanyaScriptParser.DefvarContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SanyaScriptParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(SanyaScriptParser.AssignmentContext,i)


        def print(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SanyaScriptParser.PrintContext)
            else:
                return self.getTypedRuleContext(SanyaScriptParser.PrintContext,i)


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_sanyaScript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSanyaScript" ):
                listener.enterSanyaScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSanyaScript" ):
                listener.exitSanyaScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSanyaScript" ):
                return visitor.visitSanyaScript(self)
            else:
                return visitor.visitChildren(self)




    def sanyaScript(self):

        localctx = SanyaScriptParser.SanyaScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sanyaScript)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SanyaScriptParser.NODE_TYPE) | (1 << SanyaScriptParser.ARC_TYPE) | (1 << SanyaScriptParser.GRAPH_TYPE) | (1 << SanyaScriptParser.PRINT) | (1 << SanyaScriptParser.ID))) != 0):
                self.state = 39
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.defvar()
                    pass

                elif la_ == 2:
                    self.state = 37
                    self.assignment()
                    pass

                elif la_ == 3:
                    self.state = 38
                    self.print()
                    pass


                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(SanyaScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(SanyaScriptParser.EQUALS, 0)

        def defvar(self):
            return self.getTypedRuleContext(SanyaScriptParser.DefvarContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SanyaScriptParser.ID)
            else:
                return self.getToken(SanyaScriptParser.ID, i)

        def value(self):
            return self.getTypedRuleContext(SanyaScriptParser.ValueContext,0)


        def cast(self):
            return self.getTypedRuleContext(SanyaScriptParser.CastContext,0)


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SanyaScriptParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SanyaScriptParser.NODE_TYPE, SanyaScriptParser.ARC_TYPE, SanyaScriptParser.GRAPH_TYPE]:
                self.state = 46
                self.defvar()
                pass
            elif token in [SanyaScriptParser.ID]:
                self.state = 47
                self.match(SanyaScriptParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 50
            self.match(SanyaScriptParser.EQUALS)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SanyaScriptParser.T__5:
                self.state = 51
                self.cast()


            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 54
                self.value()
                pass

            elif la_ == 2:
                self.state = 55
                self.match(SanyaScriptParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defnode(self):
            return self.getTypedRuleContext(SanyaScriptParser.DefnodeContext,0)


        def defarc(self):
            return self.getTypedRuleContext(SanyaScriptParser.DefarcContext,0)


        def defgraph(self):
            return self.getTypedRuleContext(SanyaScriptParser.DefgraphContext,0)


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_defvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefvar" ):
                listener.enterDefvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefvar" ):
                listener.exitDefvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefvar" ):
                return visitor.visitDefvar(self)
            else:
                return visitor.visitChildren(self)




    def defvar(self):

        localctx = SanyaScriptParser.DefvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SanyaScriptParser.NODE_TYPE]:
                self.state = 58
                self.defnode()
                pass
            elif token in [SanyaScriptParser.ARC_TYPE]:
                self.state = 59
                self.defarc()
                pass
            elif token in [SanyaScriptParser.GRAPH_TYPE]:
                self.state = 60
                self.defgraph()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefnodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE_TYPE(self):
            return self.getToken(SanyaScriptParser.NODE_TYPE, 0)

        def ID(self):
            return self.getToken(SanyaScriptParser.ID, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_defnode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefnode" ):
                listener.enterDefnode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefnode" ):
                listener.exitDefnode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefnode" ):
                return visitor.visitDefnode(self)
            else:
                return visitor.visitChildren(self)




    def defnode(self):

        localctx = SanyaScriptParser.DefnodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defnode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(SanyaScriptParser.NODE_TYPE)
            self.state = 64
            self.match(SanyaScriptParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefarcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARC_TYPE(self):
            return self.getToken(SanyaScriptParser.ARC_TYPE, 0)

        def ID(self):
            return self.getToken(SanyaScriptParser.ID, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_defarc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefarc" ):
                listener.enterDefarc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefarc" ):
                listener.exitDefarc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefarc" ):
                return visitor.visitDefarc(self)
            else:
                return visitor.visitChildren(self)




    def defarc(self):

        localctx = SanyaScriptParser.DefarcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_defarc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(SanyaScriptParser.ARC_TYPE)
            self.state = 67
            self.match(SanyaScriptParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefgraphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAPH_TYPE(self):
            return self.getToken(SanyaScriptParser.GRAPH_TYPE, 0)

        def ID(self):
            return self.getToken(SanyaScriptParser.ID, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_defgraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefgraph" ):
                listener.enterDefgraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefgraph" ):
                listener.exitDefgraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefgraph" ):
                return visitor.visitDefgraph(self)
            else:
                return visitor.visitChildren(self)




    def defgraph(self):

        localctx = SanyaScriptParser.DefgraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_defgraph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(SanyaScriptParser.GRAPH_TYPE)
            self.state = 70
            self.match(SanyaScriptParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleArc(self):
            return self.getTypedRuleContext(SanyaScriptParser.SimpleArcContext,0)


        def simpleUndirectedArc(self):
            return self.getTypedRuleContext(SanyaScriptParser.SimpleUndirectedArcContext,0)


        def weightedArc(self):
            return self.getTypedRuleContext(SanyaScriptParser.WeightedArcContext,0)


        def weightedUndirectedArc(self):
            return self.getTypedRuleContext(SanyaScriptParser.WeightedUndirectedArcContext,0)


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_arc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArc" ):
                listener.enterArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArc" ):
                listener.exitArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArc" ):
                return visitor.visitArc(self)
            else:
                return visitor.visitChildren(self)




    def arc(self):

        localctx = SanyaScriptParser.ArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SanyaScriptParser.T__0]:
                self.state = 72
                self.simpleArc()
                pass
            elif token in [SanyaScriptParser.T__1]:
                self.state = 73
                self.simpleUndirectedArc()
                pass
            elif token in [SanyaScriptParser.WEIGHTED_ARC_START]:
                self.state = 74
                self.weightedArc()
                pass
            elif token in [SanyaScriptParser.WEIGHTED_UNDIRECTED_ARC_START]:
                self.state = 75
                self.weightedUndirectedArc()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_simpleArc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleArc" ):
                listener.enterSimpleArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleArc" ):
                listener.exitSimpleArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleArc" ):
                return visitor.visitSimpleArc(self)
            else:
                return visitor.visitChildren(self)




    def simpleArc(self):

        localctx = SanyaScriptParser.SimpleArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simpleArc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SanyaScriptParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleUndirectedArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_simpleUndirectedArc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleUndirectedArc" ):
                listener.enterSimpleUndirectedArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleUndirectedArc" ):
                listener.exitSimpleUndirectedArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleUndirectedArc" ):
                return visitor.visitSimpleUndirectedArc(self)
            else:
                return visitor.visitChildren(self)




    def simpleUndirectedArc(self):

        localctx = SanyaScriptParser.SimpleUndirectedArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_simpleUndirectedArc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SanyaScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightedArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEIGHTED_ARC_START(self):
            return self.getToken(SanyaScriptParser.WEIGHTED_ARC_START, 0)

        def INT(self):
            return self.getToken(SanyaScriptParser.INT, 0)

        def WEIGHTED_ARC_END(self):
            return self.getToken(SanyaScriptParser.WEIGHTED_ARC_END, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_weightedArc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeightedArc" ):
                listener.enterWeightedArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeightedArc" ):
                listener.exitWeightedArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeightedArc" ):
                return visitor.visitWeightedArc(self)
            else:
                return visitor.visitChildren(self)




    def weightedArc(self):

        localctx = SanyaScriptParser.WeightedArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_weightedArc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SanyaScriptParser.WEIGHTED_ARC_START)
            self.state = 83
            self.match(SanyaScriptParser.INT)
            self.state = 84
            self.match(SanyaScriptParser.WEIGHTED_ARC_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightedUndirectedArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEIGHTED_UNDIRECTED_ARC_START(self):
            return self.getToken(SanyaScriptParser.WEIGHTED_UNDIRECTED_ARC_START, 0)

        def INT(self):
            return self.getToken(SanyaScriptParser.INT, 0)

        def WEIGHTED_ARC_END(self):
            return self.getToken(SanyaScriptParser.WEIGHTED_ARC_END, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_weightedUndirectedArc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeightedUndirectedArc" ):
                listener.enterWeightedUndirectedArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeightedUndirectedArc" ):
                listener.exitWeightedUndirectedArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeightedUndirectedArc" ):
                return visitor.visitWeightedUndirectedArc(self)
            else:
                return visitor.visitChildren(self)




    def weightedUndirectedArc(self):

        localctx = SanyaScriptParser.WeightedUndirectedArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_weightedUndirectedArc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(SanyaScriptParser.WEIGHTED_UNDIRECTED_ARC_START)
            self.state = 87
            self.match(SanyaScriptParser.INT)
            self.state = 88
            self.match(SanyaScriptParser.WEIGHTED_ARC_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeValue(self):
            return self.getTypedRuleContext(SanyaScriptParser.NodeValueContext,0)


        def arcValue(self):
            return self.getTypedRuleContext(SanyaScriptParser.ArcValueContext,0)


        def graphValue(self):
            return self.getTypedRuleContext(SanyaScriptParser.GraphValueContext,0)


        def getRuleIndex(self):
            return SanyaScriptParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = SanyaScriptParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 90
                self.nodeValue()
                pass

            elif la_ == 2:
                self.state = 91
                self.arcValue()
                pass

            elif la_ == 3:
                self.state = 92
                self.graphValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SanyaScriptParser.INT, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_nodeValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeValue" ):
                listener.enterNodeValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeValue" ):
                listener.exitNodeValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeValue" ):
                return visitor.visitNodeValue(self)
            else:
                return visitor.visitChildren(self)




    def nodeValue(self):

        localctx = SanyaScriptParser.NodeValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_nodeValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(SanyaScriptParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArcValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arc(self):
            return self.getTypedRuleContext(SanyaScriptParser.ArcContext,0)


        def nodeValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SanyaScriptParser.NodeValueContext)
            else:
                return self.getTypedRuleContext(SanyaScriptParser.NodeValueContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SanyaScriptParser.ID)
            else:
                return self.getToken(SanyaScriptParser.ID, i)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_arcValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArcValue" ):
                listener.enterArcValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArcValue" ):
                listener.exitArcValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArcValue" ):
                return visitor.visitArcValue(self)
            else:
                return visitor.visitChildren(self)




    def arcValue(self):

        localctx = SanyaScriptParser.ArcValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arcValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SanyaScriptParser.INT]:
                self.state = 97
                self.nodeValue()
                pass
            elif token in [SanyaScriptParser.ID]:
                self.state = 98
                self.match(SanyaScriptParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 101
            self.arc()
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SanyaScriptParser.INT]:
                self.state = 102
                self.nodeValue()
                pass
            elif token in [SanyaScriptParser.ID]:
                self.state = 103
                self.match(SanyaScriptParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GraphValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SanyaScriptParser.ValueContext)
            else:
                return self.getTypedRuleContext(SanyaScriptParser.ValueContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SanyaScriptParser.ID)
            else:
                return self.getToken(SanyaScriptParser.ID, i)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_graphValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphValue" ):
                listener.enterGraphValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphValue" ):
                listener.exitGraphValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphValue" ):
                return visitor.visitGraphValue(self)
            else:
                return visitor.visitChildren(self)




    def graphValue(self):

        localctx = SanyaScriptParser.GraphValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_graphValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(SanyaScriptParser.T__2)
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 107
                        self.value()
                        pass

                    elif la_ == 2:
                        self.state = 108
                        self.match(SanyaScriptParser.ID)
                        pass


                    self.state = 111
                    self.match(SanyaScriptParser.T__3) 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 117
                self.value()
                pass

            elif la_ == 2:
                self.state = 118
                self.match(SanyaScriptParser.ID)
                pass


            self.state = 121
            self.match(SanyaScriptParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE_TYPE(self):
            return self.getToken(SanyaScriptParser.NODE_TYPE, 0)

        def ARC_TYPE(self):
            return self.getToken(SanyaScriptParser.ARC_TYPE, 0)

        def GRAPH_TYPE(self):
            return self.getToken(SanyaScriptParser.GRAPH_TYPE, 0)

        def getRuleIndex(self):
            return SanyaScriptParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):
